--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="manifest" href="/manifest.webmanifest">
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <title>FestivalTime</title>
 </head>
