basic forms for buying/managing FestiBucks

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <meta name="msapplication-TileImage" content="fav/favicon-144.png">
 <meta name="msapplication-config" content="fav/browserconfig.xml">
 <!-- ****** faviconit.com favicons ****** -->
-
+<script src="https://js.stripe.com/v3/"></script>
 </head>
 
 
