--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <script defer src="https://use.fontawesome.com/releases/v5.11.2/js/all.js"></script>
 	-->
     <link rel="stylesheet" href="/main.css">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="FestiGram">
+    <meta name="theme-color" content="#003300">
     <title>FestiGram</title>
 <!-- ****** faviconit.com favicons ****** -->
 <link rel="shortcut icon" href="fav/favicon.ico">
