--- a/index.html
+++ b/index.html
@@ -1,50 +1,380 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!--
+	<head>
+		<meta charset="UTF-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, shrink-to-fit=no"
+		/>
+		<!--
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <script defer src="https://use.fontawesome.com/releases/v5.11.2/js/all.js"></script>
 	-->
-    <link rel="stylesheet" href="/main.css">
-    <link rel="manifest" href="/manifest.json">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <meta name="apple-mobile-web-app-title" content="FestiGram">
-    <meta name="theme-color" content="#003300">
-    <title>FestiGram</title>
-<!-- ****** faviconit.com favicons ****** -->
-<link rel="shortcut icon" href="fav/favicon.ico">
-<link rel="icon" sizes="16x16 32x32 64x64" href="fav/favicon.ico">
-<link rel="icon" type="image/png" sizes="196x196" href="fav/favicon-192.png">
-<link rel="icon" type="image/png" sizes="160x160" href="fav/favicon-160.png">
-<link rel="icon" type="image/png" sizes="96x96" href="fav/favicon-96.png">
-<link rel="icon" type="image/png" sizes="64x64" href="fav/favicon-64.png">
-<link rel="icon" type="image/png" sizes="32x32" href="fav/favicon-32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="fav/favicon-16.png">
-<link rel="apple-touch-icon" href="fav/favicon-57.png">
-<link rel="apple-touch-icon" sizes="114x114" href="fav/favicon-114.png">
-<link rel="apple-touch-icon" sizes="72x72" href="fav/favicon-72.png">
-<link rel="apple-touch-icon" sizes="144x144" href="fav/favicon-144.png">
-<link rel="apple-touch-icon" sizes="60x60" href="fav/favicon-60.png">
-<link rel="apple-touch-icon" sizes="120x120" href="fav/favicon-120.png">
-<link rel="apple-touch-icon" sizes="76x76" href="fav/favicon-76.png">
-<link rel="apple-touch-icon" sizes="152x152" href="fav/favicon-152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="fav/favicon-180.png">
-<meta name="msapplication-TileColor" content="#FFFFFF">
-<meta name="msapplication-TileImage" content="fav/favicon-144.png">
-<meta name="msapplication-config" content="fav/browserconfig.xml">
-<!-- ****** faviconit.com favicons ****** -->
-<script src="https://js.stripe.com/v3/"></script>
-</head>
+		<link rel="stylesheet" href="/main.css" />
+		<link rel="manifest" href="/manifest.json" />
+		<link
+			rel="preload"
+			href="https://fonts.gstatic.com/s/rubik/v12/iJWZBXyIfDnIV5PNhY1KTN7Z-Yh-B4iFWUU1Z4Y.woff2"
+			as="font"
+			type="font/woff2"
+			crossorigin
+		/>
+		<link rel="preload" as="image" href="/img/Crowdshot.jpg" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="default" />
+		<meta name="apple-mobile-web-app-title" content="FestiGram" />
+		<meta name="theme-color" content="#003300" />
+		<title>FestiGram</title>
+		<!-- ****** faviconit.com favicons ****** -->
+		<link rel="shortcut icon" href="fav/favicon.ico" />
+		<link rel="icon" sizes="16x16 32x32 64x64" href="fav/favicon.ico" />
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="196x196"
+			href="fav/favicon-192.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="160x160"
+			href="fav/favicon-160.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="96x96"
+			href="fav/favicon-96.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="64x64"
+			href="fav/favicon-64.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="fav/favicon-32.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="fav/favicon-16.png"
+		/>
+		<link rel="apple-touch-icon" href="fav/favicon-57.png" />
+		<link
+			rel="apple-touch-icon"
+			sizes="114x114"
+			href="fav/favicon-114.png"
+		/>
+		<link rel="apple-touch-icon" sizes="72x72" href="fav/favicon-72.png" />
+		<link
+			rel="apple-touch-icon"
+			sizes="144x144"
+			href="fav/favicon-144.png"
+		/>
+		<link rel="apple-touch-icon" sizes="60x60" href="fav/favicon-60.png" />
+		<link
+			rel="apple-touch-icon"
+			sizes="120x120"
+			href="fav/favicon-120.png"
+		/>
+		<link rel="apple-touch-icon" sizes="76x76" href="fav/favicon-76.png" />
+		<link
+			rel="apple-touch-icon"
+			sizes="152x152"
+			href="fav/favicon-152.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="fav/favicon-180.png"
+		/>
+		<meta name="msapplication-TileColor" content="#FFFFFF" />
+		<meta name="msapplication-TileImage" content="fav/favicon-144.png" />
+		<meta name="msapplication-config" content="fav/browserconfig.xml" />
+		<!-- ****** faviconit.com favicons ****** -->
+		<script defer src="https://js.stripe.com/v3/"></script>
+		<style type = text/css>
+			:root {
+    --selected-bg-color: gray;
+    --already-read: palevioletred;
+    --own-content: lightsteelblue;
+    --color-own-content: lightsteelblue;
+    --gt-background-color: #000033;
+    --pg-background-color: #003300;
+    --festival-red: #ff2828;
+    --color-disabled: #666666;
+    --color-active: #ff2828;
+    --background-color-active: #00d7d7;
+    --background-color-own-content: #917d56;
+    --pg-icon-color: #f7b9a1;
+}
+body {
+    background: radial-gradient(black, #003300);
+    height: 100%;
+    margin: 0;
+    overflow: scroll;
+    padding: 0;
+    width: 100%;
+}
 
+html {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+#app {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    font-family: "Rubik", sans-serif;
+}
+.App {
+    display: flex;
+    flex-direction: column;
+}
 
-<body>
-    <div id="app"></div>
-    <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
-    <script src="/bundle.js"></script>
-</body>
+.ft-banner-menu {
+    bottom: 0;
+    right: 0;
+    z-index: 10;
+}
+.ft-card {
+    background: white;
+    color: black;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+    font-size: 100%;
+    justify-content: space-between;
+    margin: 0.5em;
+    padding: 0.5em;
+}
+.ft-card-container {
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+}
 
+.ft-card-thumbnail {
+    width: 50px;
+}
+
+.ft-field {
+    font-size: 100%;
+    display: inline-block;
+    margin: 0 0.25em 0;
+}
+
+.ft-fields {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    min-height: 1.5em;
+}
+
+.ft-fields-with-thumbnail {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    min-height: 1.5em;
+    overflow: hidden;
+    position: relative;
+}
+
+.ft-icon {
+	height: 50px;
+	max-height: 100%;
+	max-width: 100%;
+	width: 50px;
+}
+.ft-icon-div {
+	fill: var(--pg-icon-color);
+	height: 100%;
+	left: 0;
+	position: relative;
+	top: 0;
+	width: 100%;
+}
+.ft-icon-span {
+	display: inline-block;
+	height: 1em;
+	width: 1em;
+}
+.ft-icon-stack-lower-right {
+	bottom: 0;
+	height: 45%;
+	position: absolute;
+	right: 0;
+	width: 45%;
+}
+.ft-icon-stack-upper-left {
+	height: 45%;
+	left: 0;
+	position: absolute;
+	top: 0;
+	width: 45%;
+}
+.ft-icon-stack.ft-icon-stack {
+	display: inline-block;
+	height: 50px;
+	margin: 0;
+	position: relative;
+	vertical-align: baseline;
+	width: 50px;
+}
+.ft-icon-stack .ft-icon-div {
+	position: absolute;
+}
+
+.ft-name-fields {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+}
+
+.ft-nav-button {
+    cursor: pointer;
+    flex-shrink: 0;
+    font-size: 150%;
+    height: 50px;
+    width: 50px;
+}
+
+.ft-spacer {
+    margin: 0 0.25em 0;
+}
+
+.ft-stage-banner {
+    align-items: center;
+    background-image: url(img/Crowdshot.jpg);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    margin: 0.5em;
+    position: relative;
+}
+
+.ft-stage-banner svg {
+    color: #f7b9a1;
+    font-size: 180%;
+}
+
+.ft-stage-banner-container {
+    overflow-y: visible;
+    position: static;
+    width: 100%;
+}
+.ft-stage-title {
+    color: #f7b9a1;
+    display: inline-flex;
+    flex-grow: 9;
+    flex-shrink: 9;
+    font-size: 180%;
+    font-weight: bold;
+    letter-spacing: 2px;
+    margin: 5px;
+    overflow: hidden;
+    padding: 10px 0;
+    text-align: left;
+    text-transform: uppercase;
+    white-space: nowrap;
+}
+.ft-vertical-fields {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+}
+
+.ft-widget-container footer {
+    border-top: 1px solid black;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+.ft-widget-container {
+    align-items: flex-start;
+    display: flex;
+    flex-direction: row;
+    flex-grow: 1;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    min-height: 0px;
+    overflow-y: scroll;
+    padding: 0 0 80px;
+    width: 100%;
+}
+
+.ft-widget-container header {
+    color: white;
+    border-bottom: 1px solid black;
+}
+
+.ft-widget-container section {
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    max-height: 300px;
+    width: 300px;
+}
+
+.ft-widget-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.ft-widget-header-text {
+    height: 50px;
+    line-height: 50px;
+}
+
+.ft-widget-fixed-card {
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    max-height: 300px;
+    width: 300px;
+}
+
+.hidden {
+    display: none;
+}
+
+.main-stage {
+    background: radial-gradient(black, #003300);
+    display: inline-flex;
+    flex-direction: column;
+    height: 100%;
+    overflow-y: hidden;
+    padding: 5px 5px 5px 5px;
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+}
+
+.ft-pr {
+    position: relative;
+}
+		</style>
+	</head>
+
+	<body>
+		<div id="app"></div>
+		<script
+			defer
+			src="https://widget.cloudinary.com/v2.0/global/all.js"
+			type="text/javascript"
+		></script>
+		<script src="/bundle.js"></script>
+	</body>
 </html>
