added google analytics

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 			crossorigin
 		/>
 		<link rel="preload" as="image" href="/img/Crowdshot.jpg" />
+		<title>FestiGram</title>
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="default" />
 		<meta name="apple-mobile-web-app-title" content="FestiGram" />
 		<meta name="theme-color" content="#003300" />
-		<title>FestiGram</title>
 		<!-- ****** faviconit.com favicons ****** -->
 		<link rel="shortcut icon" href="fav/favicon.ico" />
 		<link rel="icon" sizes="16x16 32x32 64x64" href="fav/favicon.ico" />
@@ -98,6 +98,15 @@
 		<meta name="msapplication-config" content="fav/browserconfig.xml" />
 		<!-- ****** faviconit.com favicons ****** -->
 		<script defer src="https://js.stripe.com/v3/"></script>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HERSZF6YBR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HERSZF6YBR');
+</script>
 		<style type = text/css>
 			:root {
     --selected-bg-color: gray;
