add help link to support page

--- a/index.html
+++ b/index.html
@@ -98,15 +98,17 @@
 		<meta name="msapplication-config" content="fav/browserconfig.xml" />
 		<!-- ****** faviconit.com favicons ****** -->
 		<script defer src="https://js.stripe.com/v3/"></script>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HERSZF6YBR"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-HERSZF6YBR');
-</script>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-HERSZF6YBR">
+		</script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'G-HERSZF6YBR');
+		</script>
 		<style type = text/css>
 			:root {
     --selected-bg-color: gray;
